✨ feat: add set score column and update match history logic (#59)

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                                     <s-tr>
                                         <s-th data-lang="ui.gameBoard.matchHistory.match"></s-th>
                                         <s-th data-lang="ui.gameBoard.matchHistory.score"></s-th>
+                                        <s-th data-lang="ui.gameBoard.matchHistory.setScore"></s-th>
                                         <s-th data-lang="ui.gameBoard.matchHistory.winner"></s-th>
                                     </s-tr>
                                 </s-thead>
